--- a/blog/package.json
+++ b/blog/package.json
@@ -6,12 +6,12 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^2.1.4",
-    "gatsby": "^5.12.3",
+    "gatsby": "^5.12.9",
     "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-plugin-styled-components": "^6.12.0",
-    "gatsby-source-contentful": "^8.12.0",
+    "gatsby-source-contentful": "^8.12.4",
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-transformer-remark": "^6.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
@@ -19,7 +19,8 @@
     "npm": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^5.3.11",
+    "styled-icons": "^10.47.0"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
